# wexfera

./: .clang-format  .gitignore  Doxyfile  meson.build  meson_options.txt
board/stm32f302r8/: board.c  memory.ld  meson.build
board/stm32f302r8/include/: board.h
include/arch/: barriers.h  context.h  fault.h  irq.h  scs.h  spinlock.h  timer.h
include/asm/: helpers.h  irq.S
include/boot/: sequence.h
include/drivers/gpio/: stm32.h
include/drivers/usart/: stm32.h
include/kernel/: alloc.h  panic.h  syscall.h
include/lib/: _printfmt.h  array_size.h  bits.h  check.h  cleanup.h  compiler.h  container.h  error.h  extrema.h  list.h  log.h  preproc.h  reg.h  round.h  string.h  types.h
scripts/: common  setup.sh
scripts/hooks/: pre-commit
src/: meson.build
src/arch/: context.S  context.c  corevtab.S  fault.S  fault.c  faults.S  irq.c  meson.build  spinlock.c  svcall.S  timer.c
src/boot/: boot0.S  boot1.c  common.ld  meson.build  sequence.c
src/drivers/gpio/stm32/: meson.build  stm32.c
src/drivers/usart/stm32/: meson.build  stm32.c
src/kernel/: alloc.c  meson.build  panic.c  syscall.c
src/lib/: list.c  log.c  meson.build  string.c  types.c
src/lib/_printfmt/: __pfmt_fmt_maker.h  __pfmt_proc_d.c  __pfmt_proc_funcs.h  __pfmt_proc_s.c  __pfmt_proc_u.c  __pfmt_proc_x.c  _printfmt.c  meson.build
src/lib/string/: __aeabi_memclr4.S  __aeabi_memcpy.S  meson.build  string.c  strlen.S
